replace with initMap and mainScript

--- a/index.html
+++ b/index.html
@@ -1,29 +1,91 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Leaflet</title>
-    <!-- bootstrap 5.2 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!--Leaflet stylesheet-->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
-     crossorigin=""/>
-    <!-- personal stylesheet -->  
-    <link rel="stylesheet" href="style.css">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Where2Eat</title>
+    <link rel="icon" type="image/x-icon" href="/images/dino.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+    <!-- Bootstrap 5.2 -->
+    <link rel="stylesheet href=" <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+        rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+        crossorigin="anonymous""/>
+
+    <!-- leaflet css -->
+    <link rel=" stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+        integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
+
+    <!-- leaflet clustering css-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
+
+    <!-- my own css-->
+    <link rel="stylesheet" href="css/style.css" />
+
 </head>
-  <body>
 
-    <div id="map"></div>
-    
-    <!-- bootstrap5.2 --->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>    <!-- main script 5.2-->
-    <!-- leaflet script --->
-     <!-- Make sure you put this AFTER Leaflet's CSS -->
- <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
- crossorigin=""></script>
-    <!-- personal script --->
-    <script src="script.js"></script>
+<body style="background-color:#0288D1">
+    <div id="map-container">
+        <button id="btnToggleSearch">Search Toggle</button>
+        <div id="map"></div>
+        <div id="search-container">
 
-  </body>
+            <div class="dropdown">
+                <label for="foods"> </label>
+                <select name="Foods" id="foods" class="btnDropdown" style="text-align:left">
+                    <option type="food" value="0" class="empty" name="food" style="visibility: hidden;">Food Seletcion
+                    </option>
+                    <option type="food" value="13099" class="chineseFood" name="food">1. Chinese Foods</option>
+                    <option type="food" value="13199" class="indianFood" name="food">2. Indian Foods</option>
+                    <option type="food" value="13225" class="indoFood" name="food">3. Indonesian Food</option>
+                    <option type="food" value="13145" class="fastFood" name="food">4. Fast Foods</option>
+                    <option type="food" value="13052" class="foodCourt" name="food">5. Food Courts/Hawker Centers
+                    </option>
+                    <option type="food" value="13338" class="seaFood" name="food">6. Seafood Foods</option>
+                    <option type="food" value="13377" class="localFood" name="food">7. Vegetarian Foods</option>
+                    <option type="food" value="13340" class="localFood" name="food">8. Singaporean Restuarants</option>
+                    <option type="food" value="0" class="empty" name="food" style="visibility: hidden;"></option>
+                </select>
+
+                <div id="results"></div>
+            </div>
+        </div>
+
+        <div class="div-footer">
+            <footer class="footer">
+                <p style="text-align: center;"><input placeholder=" search here " type="text" id="searchTerms" />
+                <button id="btnSearch" class="btn btn-info"><i class="fa fa-search"></i></button /></p>
+            </footer>
+        </div>
+
+    <!-- Bootstrap 5.2 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+
+    <!-- Axios -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"
+        integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- Leaflet -->
+    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+        integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
+
+    <!-- Leaflet Clustering -->
+    <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
+
+    <!-- Data Script -->
+    <script src="data/foursquare.js"></script>
+
+    <!-- Main Script -->
+    <script src="scripts/foursquare.js"></script>
+    <script src="scripts/initMap.js"></script>
+    <script src="scripts/mainScript.js"></script>
+
+</body>
+
 </html>
