--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <!-- Bootstrap 5.2 -->
-    <link rel="stylesheet href=" <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-        rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-        crossorigin="anonymous""/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <!-- leaflet css -->
     <link rel=" stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
@@ -27,12 +25,44 @@
 
 </head>
 
-<body style="background-color:#0288D1">
-    <div id="map-container">
-        <button id="btnToggleSearch">Search Toggle</button>
-        <div id="map"></div>
-        <div id="search-container">
+<!--body style="background-color:#0288D1">-->
+<body>
 
+<!-- Off Canvas -->
+  <!--button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">Menu</button>-->  
+  <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasExampleLabel">Welcome!</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div> Info </div>
+      <div class="dropdown mt-3">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+          Menu
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+<!-- Off Canvas -->
+
+<!-- Food Search -->
+  <div id="map-container">
+    <button id="btnToggleSearch">Search Toggle</button>
+    <div id="map"></div>
+    <div id="search-container">
+      <input type="text" id="searchTerms"/>
+      <button id="btnSearch">Search</button>
+      <div id="results"></div>
+    </div>
+  </div>
+         
+        <!---
             <div class="dropdown">
                 <label for="foods"> </label>
                 <select name="Foods" id="foods" class="btnDropdown" style="text-align:left">
@@ -53,13 +83,8 @@
                 <div id="results"></div>
             </div>
         </div>
-
-        <div class="div-footer">
-            <footer class="footer">
-                <p style="text-align: center;"><input placeholder=" search here " type="text" id="searchTerms" />
-                <button id="btnSearch" class="btn btn-info"><i class="fa fa-search"></i></button /></p>
-            </footer>
-        </div>
+-->
+<!-- Food Search -->
 
     <!-- Bootstrap 5.2 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -82,7 +107,8 @@
     <script src="data/foursquare.js"></script>
 
     <!-- Main Script -->
-    <script src="scripts/foursquare.js"></script>
+    <!--script src="scripts/foursquare.js"></script>-->
+    <script src="data/data.js"></script>
     <script src="scripts/initMap.js"></script>
     <script src="scripts/mainScript.js"></script>
 
