--- a/index.html
+++ b/index.html
@@ -25,26 +25,24 @@
 
 </head>
 
-<!--body style="background-color:#0288D1">-->
-<body>
+<body style="background-color:rgba(39, 135, 245, 0.8)">
 
 <!-- Food Search -->
 <div id="map-container">
   <button id="btnToggleSearch">Search Toggle</button>
   <div id="map"></div>
     <div id="results"></div>
-    <!--<div class="fixed-bottom"><input type="text" id="searchTerms"/><button id="btnSearch">Search</button></div>-->
   </div>
 
-<!-- Off Canvas --> 
+<!-- footer --> 
 <div class="div-footer">
     <footer class="footer">      
         <p style="text-align: center;">
-        <span><input placeholder="search here.." type="text" id="searchTerms"/><button id="btnSearch">search</button></span>
+            <span><input placeholder="  search here.. " type="text" id="searchTerms"/><button id="btnSearch" style="font: weight 100%;;">search</button></span>
         </p>      
     </footer>
 </div>
-<!-- Off Canvas -->
+<!-- footer -->
             
            <!--<div class="dropdown">
                 <label for="foods"> </label>
