--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="div-footer">
     <footer class="footer">      
         <p style="text-align: center;">
-            <span><input placeholder="  search here.. " type="text" id="searchTerms"/><button id="btnSearch" style="font: weight 100%;;">search</button></span>
+            <span><input placeholder=" Search here.. " type="text" id="searchTerms"/><button id="btnSearch" style="font: weight 100%;;">Search</button></span>
         </p>      
     </footer>
 </div>
