add img, edit scripts file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where2Eat</title>
-    <link rel="icon" type="image/x-icon" href="/images/dino.png" />
+    <link rel="icon" type="image/x-icon" href="/images/raining.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <!-- Bootstrap 5.2 -->
@@ -38,7 +38,7 @@
 <div class="div-footer">
     <footer class="footer">      
         <p style="text-align: center;">
-            <span><input placeholder="Search here.." type="text" id="searchTerms"/><button id="btnSearch">Search</button></span>
+            <span><input placeholder="type here.." type="text" id="searchTerms"/><button id="btnSearch">Search</button></span>
         </p>      
     </footer>
 </div>
