edit mainscript, initmap and delete data1

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Where2Eat</title>
     <link rel="icon" type="image/x-icon" href="/images/raining.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <!-- Bootstrap 5.2 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <!-- leaflet css -->
     <link rel=" stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
@@ -38,7 +40,7 @@
 <div class="div-footer">
     <footer class="footer">      
         <p style="text-align: center;">
-            <span><input placeholder="type here.." type="text" id="searchTerms"/><button id="btnSearch">Search</button></span>
+            <span><input placeholder="Type here.." type="text" id="searchTerms"/><button id="btnSearch">Search</button></span>
         </p>      
     </footer>
 </div>
@@ -87,6 +89,7 @@
 
     <!-- Main Script -->
     <!--script src="scripts/foursquare.js"></script>-->
+    <script src="data/data1.js"></script>
     <script src="data/data.js"></script>
     <script src="scripts/initMap.js"></script>
     <script src="scripts/mainScript.js"></script>
